--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,8 @@
   --grey700: #2C3340;
   --grey900: #121418;
   --primary-gradient: linear-gradient(90deg, #28B499 3.45%, #12C397 45.19%, #E7CE7B 100%);
+  --simple-glow: 0px 0px 10px rgba(255, 255, 255, 0.5);
+  --card-glow: 0px 0px 35px rgba(255, 255, 255, 0.5);
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
@@ -16,4 +18,15 @@
   box-sizing: border-box;
   font-family: 'Audiowide', cursive;
   font-size: 24px;
+}
+
+body{
+  background: var(--grey900);
+  color: var(--primary);
+}
+
+
+
+.simple-glow{
+  filter: drop-shadow(0px 0px 10px rgba(255, 255, 255, 0.5));
 }
