--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,4 +1,34 @@
-<div *ngIf="auth.user | async as user">
-  <h1>Hello {{ user.displayName }}!</h1>
-  <button (click)="logout()">Logout</button>
+<div class="header">
+  <div class="header-group">
+    <img class="simple-glow" src="assets/icons/controller-icon.svg">
+    <span class="simple-glow">CANAP</span>
+  </div>
+
+  <div class=" header-group">
+    <img (click)="logout()" class="simple-glow" src="assets/icons/settings-icon.svg">
+    <div class="simple-glow user-display-name">
+      <span>{{displayNameLetter}}</span>
+    </div>
+  </div>
+</div>
+
+<div class="dashboard-container">
+  <span class="title">Dashboard</span>
+
+  <div class="dashboard-card">
+    <div class="dashboard-card-header">
+      <div class="dashboard-card-header-container">
+        <img src="assets/icons/gamenight-icon.svg">
+        <span class="card-title">Game Nights</span>
+      </div>
+      <div class="dashboard-card-header-container">
+        <span class="card-title">Add</span>
+        <img src="assets/icons/add-icon.svg">
+      </div>
+    </div>
+    <div class="dashboard-card-content">
+      <img class="no-content-icon" src="assets/icons/no-content-icon.svg">
+      <span class="normal-text">No Game Night created</span>
+    </div>
+  </div>
 </div>
