--- a/src/app/components/dashboard/dashboard-card/dashboard-card.component.html
+++ b/src/app/components/dashboard/dashboard-card/dashboard-card.component.html
@@ -1,1 +1,45 @@
-<p>dashboard-card works!</p>
+<div class="dashboard-card">
+  <div class="dashboard-card-header">
+    <div class="dashboard-card-header-container">
+      <img src="{{cardIconUrl}}">
+      <span class="card-title">{{cardTitle}}</span>
+    </div>
+    <div class="dashboard-card-header-container">
+      <span class="card-title">Add</span>
+      <img src="assets/icons/add-icon.svg">
+    </div>
+  </div>
+
+  <div *ngIf="gameNights.length > 0 || games.length > 0 else noContent">
+
+    <div *ngIf="gameNights.length>0" class="dashboard-card-content">
+      <div class="card-content-item" *ngFor="let gameNight of gameNights">
+        <span>{{gameNight.name}}</span>
+        <span>12 Players</span>
+        <span>Teams of 3</span>
+        <img src="assets/icons/menu-icon.svg">
+      </div>
+    </div>
+
+    <div *ngIf="games.length>0" class="dashboard-card-content">
+      <div class="game-content-item" *ngFor="let game of games">
+        <div class="item-title">
+          <div class="game-preview" [style.background-image]="'url(' + game.imageUrl + ')'" ></div>
+          <span>{{game.name}}</span>
+        </div>
+
+        <img src="assets/icons/menu-icon.svg">
+      </div>
+    </div>
+  </div>
+
+</div>
+
+
+<ng-template #noContent>
+  <div class="dashboard-card-no-content">
+    <img class="no-content-icon" src="assets/icons/no-content-icon.svg">
+    <span class="normal-text no-content-text">No Game Night created</span>
+  </div>
+</ng-template>
+
