--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -35,49 +35,17 @@
 
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-
-  .dashboard-card{
-    background: var(--grey700);
-    border-radius: 20px;
-    box-shadow: var(--card-glow);
-
-    .dashboard-card-header{
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: center;
-      padding: 0.5rem;
-
-      .dashboard-card-header-container{
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        gap: 0.5rem;
+  gap: 2rem;
 
 
+  .game-and-history-container{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    gap: 2rem;
 
-        img:nth-child(1){
-          width: 25px;
-          height: 25px;
-        }
-        img:nth-child(2){
-          width: 20px;
-          height: 20px;
-        }
-      }
-    }
-
-    .dashboard-card-content{
-      padding: 10vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .no-content-icon{
-      width: 44px;
-      height: 44px;
+    app-dashboard-card{
+      width: 100%;
     }
   }
 }
