--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,16 +1,4 @@
-<div class="header">
-  <div class="header-group">
-    <img class="simple-glow" src="assets/icons/controller-icon.svg">
-    <span class="simple-glow">CANAP</span>
-  </div>
-
-  <div class=" header-group">
-    <img (click)="logout()" class="simple-glow" src="assets/icons/settings-icon.svg">
-    <div class="simple-glow user-display-name">
-      <span>{{displayNameLetter}}</span>
-    </div>
-  </div>
-</div>
+<app-header></app-header>
 
 <div class="dashboard-container">
   <span class="title">Dashboard</span>
