--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -8,7 +8,7 @@
     <span class="simple-glow login-text-logo">CANAP</span>
   </div>
 
-  <ng-container *ngIf="!(auth.user | async)">
+  <ng-container>
 
     <div (click)="login()" class="button-gradient-background">
       <div class="button-hover-background">
