add game nights ui components

--- a/src/app/components/add-game-night/add-game-night.component.html
+++ b/src/app/components/add-game-night/add-game-night.component.html
@@ -1,1 +1,47 @@
 <app-header style="position: absolute" [isSettingsVisible]="false"></app-header>
+
+<div class="add-gameNight-container">
+  <div class="form-container">
+    <app-game-night-name *ngIf="counter===0"
+                         (nextStepEmitter)="incrementCounter()"
+                         style="width: 100%"
+    ></app-game-night-name>
+
+    <app-game-night-number-input *ngIf="counter===1"
+                                 (nextStepEmitter)="incrementCounter()"
+                                 [title]="'How many players by team ?'"
+                                 style="width: 100%"
+    ></app-game-night-number-input>
+
+    <app-game-night-number-input *ngIf="counter===2"
+                                 (nextStepEmitter)="incrementCounter()"
+                                 [title]="'How many Teams ?'"
+                                 style="width: 100%"
+    ></app-game-night-number-input>
+
+    <app-game-night-create-team *ngIf="counter===3"
+                                (nextStepEmitter)="incrementCounter()"
+                                style="width: 100%"
+    ></app-game-night-create-team>
+
+    <app-game-night-number-input *ngIf="counter===4"
+                                 (nextStepEmitter)="incrementCounter()"
+                                 [title]="'How many games ?'"
+                                 style="width: 100%"
+    ></app-game-night-number-input>
+
+    <app-game-night-add-game *ngIf="counter===5"
+                                 (nextStepEmitter)="incrementCounter()"
+                                 style="width: 100%"
+    ></app-game-night-add-game>
+
+    <app-game-night-save *ngIf="counter===6"
+                         (nextStepEmitter)="incrementCounter()"
+                         style="width: 100%"
+    ></app-game-night-save>
+
+  </div>
+
+  <div class="illustration-container"  [style.background-image]="'url(../../../assets/images/create-gameNight.png)'"></div>
+</div>
+
