--- a/src/app/components/add-game-night/game-night-name/game-night-name.component.html
+++ b/src/app/components/add-game-night/game-night-name/game-night-name.component.html
@@ -3,5 +3,5 @@
 
   <input formControlName="name" placeholder="Enter a name">
 
-  <app-primary-button *ngIf="addGameNightNameForm.valid" (clickEmitter)="nextStepEmitter.emit()" [buttonText]="'Next'"></app-primary-button>
+  <app-primary-button *ngIf="addGameNightNameForm.valid" (clickEmitter)="submit()" [buttonText]="'Next'"></app-primary-button>
 </div>
