--- a/src/app/components/add-game-night/game-night-create-team/game-night-create-team.component.html
+++ b/src/app/components/add-game-night/game-night-create-team/game-night-create-team.component.html
@@ -20,5 +20,5 @@
     </div>
   </div>
 
-  <app-primary-button *ngIf="addGameNightNameForm.valid && emojiSelected" (clickEmitter)="nextStepEmitter.emit()" [buttonText]="'Next'"></app-primary-button>
+  <app-primary-button *ngIf="addGameNightNameForm.valid && emojiSelected" (clickEmitter)="submit()" [buttonText]="'Next'"></app-primary-button>
 </div>
