--- a/src/app/components/add-game-night/game-night-save/game-night-save.component.html
+++ b/src/app/components/add-game-night/game-night-save/game-night-save.component.html
@@ -1,5 +1,5 @@
 <div class="form-container">
   <span>Let's Play !</span>
 
-  <app-primary-button  (clickEmitter)="nextStepEmitter.emit()" [buttonText]="'Save'"></app-primary-button>
+  <app-primary-button  (clickEmitter)="save()" [buttonText]="'Save'"></app-primary-button>
 </div>
