--- a/src/app/components/add-game-night/game-night-add-game/game-night-add-game.component.scss
+++ b/src/app/components/add-game-night/game-night-add-game/game-night-add-game.component.scss
@@ -41,3 +41,41 @@ input:focus{
     }
   }
 }
+
+.game-selector-container{
+  cursor: pointer;
+  position: relative;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid var(--grey500);
+
+  span{
+    color: var(--grey500);
+  }
+
+  .selector{
+    display: none;
+    position: absolute;
+    top: 2rem;
+    width: 100%;
+    height: 200px;
+    background: var(--grey700);
+    border-radius: 4px;
+
+    span{
+      cursor: pointer;
+      width: 100%;
+    }
+  }
+
+  .selector.active{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    overflow: auto;
+    gap: 0.5rem;
+  }
+
+}
