--- a/src/app/components/dashboard/dashboard-card/dashboard-card.component.scss
+++ b/src/app/components/dashboard/dashboard-card/dashboard-card.component.scss
@@ -96,3 +96,14 @@
 .add-button{
   cursor: pointer;
 }
+
+.card-item-menu{
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: .75rem;
+}
+
+
+
