--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@
   --grey300: #E0E0E0;
   --grey500: #9699A0;
   --grey700: #2C3340;
+  --grey800: #232528;
   --grey900: #121418;
   --primary-gradient: linear-gradient(90deg, #28B499 3.45%, #12C397 45.19%, #E7CE7B 100%);
   --simple-glow: 0px 0px 10px rgba(255, 255, 255, 0.5);
@@ -12,7 +13,8 @@
 
   --title:32px;
   --card-title:24px;
-  --normal-text: 18px
+  --normal-text: 18px;
+  --small-text: 14px;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
