update score && display leaderboard && save gameNight state to resume it

--- a/src/app/components/run-game-night/game-night-total-score/game-night-total-score.component.html
+++ b/src/app/components/run-game-night/game-night-total-score/game-night-total-score.component.html
@@ -1,1 +1,9 @@
-<p>game-night-total-score works!</p>
+<div *ngIf="leaderBoard$ | async as leaderBoard" class="leaderBoard-container">
+  <span>Results</span>
+  <div class="leaderBoard-content">
+    <span >RANK TEAM POINTS</span>
+    <span *ngFor="let teamRank of leaderBoard">{{teamRank.rank}} {{teamRank.team.emoji}} {{teamRank.score}}</span>
+  </div>
+
+  <app-primary-button [buttonText]="'Finish'" ></app-primary-button>
+</div>
