--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 
 <div class="dashboard-container">
-  <span class="title">Dashboard</span>
+  <span class="title simple-glow">Dashboard</span>
 
   <app-dashboard-card [gameNights]="gameNights"
                       [cardTitle]="'Game Nights'"
