--- a/src/app/components/add-game/add-game.component.scss
+++ b/src/app/components/add-game/add-game.component.scss
@@ -45,7 +45,8 @@
       font-size: 20px!important;
       background: var(--grey700);
       border-radius: 20px;
-      box-shadow: var(--card-glow);
+      box-shadow: 0px 0px 30px rgba(255, 255, 255, 0.5);
+      transition: 0.2s;
 
       display: flex;
       flex-direction: column;
@@ -66,6 +67,9 @@
         height: 40px;
       }
     }
+    .import-card:hover{
+      box-shadow: 0px 0px 50px rgba(255, 255, 255, 0.5);
+    }
   }
 }
 
@@ -78,8 +82,13 @@
 }
 
 .upload-button{
+  cursor: pointer;
   padding: 16px 32px;
   border: 2px solid var(--primary);
   border-radius: 8px;
+  transition: 0.2s;
+}
+.upload-button:hover{
+  filter: drop-shadow(0px 0px 10px rgba(255, 255, 255, 0.5));
 }
 
