--- a/src/app/components/dashboard/dashboard-card/card-item-menu/card-item-menu.component.scss
+++ b/src/app/components/dashboard/dashboard-card/card-item-menu/card-item-menu.component.scss
@@ -34,6 +34,11 @@
       flex-direction: row;
       align-items: center;
       gap: 0.5rem;
+      transition: 0.2s;
+    }
+    .popup-item:hover{
+      filter: drop-shadow(0px 0px 5px rgba(255, 255, 255, 0.5));
+
     }
 
   }
