--- a/src/app/components/run-game-night/run-game-night.component.html
+++ b/src/app/components/run-game-night/run-game-night.component.html
@@ -12,6 +12,7 @@
     <app-game-round-score *ngIf="currentState === 1"
                           [gameNight$]="gameNight$"
                           (goToResultEvent)="goToResults($event)"
+                          (gameEvent)="setGameImage($event)"
                           style="width: 100%"
     ></app-game-round-score>
 
@@ -22,5 +23,7 @@
 
   </div>
 
-  <div class="illustration-container"  [style.background-image]="'url(../../../assets/images/save-gameNight.png)'"></div>
+  <div class="illustration-container" *ngIf="currentState === 0" [style.background-image]="'url(../../../assets/images/save-gameNight.png)'"></div>
+  <div class="illustration-container" *ngIf="currentState === 1" [style.background-image]="'url(' + currentGameImage +')'"></div>
+  <div class="illustration-container" *ngIf="currentState === 2" [style.background-image]="'url(../../../assets/images/result.png)'"></div>
 </div>
